--- a/nimhapkg/tmpl/rss.tmpl
+++ b/nimhapkg/tmpl/rss.tmpl
@@ -4,8 +4,8 @@
 #
 #
 #
-#proc genRss(c: var TData, testFeed = ""): string = 
-# result = "" 
+#proc genRss(c: var TData, testFeed = ""): string =
+# result = ""
 <head>
   ${genMainHead(c)}
 </head>
@@ -22,7 +22,7 @@
 
       <div id="pagewrapper">
         <div id="rss">
-         
+
           <h1>RSS</h1>
 
           <hr>
@@ -57,7 +57,7 @@
                 $testFeed
               </div>
               <div class="rssTestOutput">
-                
+
               </div>
               # end if
 
@@ -68,13 +68,13 @@
           <hr>
 
           <div class="rssFeeds">
-            # let rssFeeds = getAllRows(db, sql"SELECT id, url, skip, fields, name FROM rss_feeds")
+            # let rssFeeds = getAllRows(dbRss, sql"SELECT id, url, skip, fields, name FROM rss_feeds")
 
             <h3>RSS feeds</h3>
 
             <p>Fields needs to comma separated and listed in chronological order, as they appear in the RSS feed.</p>
             <p>The skip x lines will skip the first x hits according to your fields.</p>
-            
+
             <br>
 
             <p>Examples</p>
@@ -146,7 +146,7 @@
   </main>
 
   <footer>
-    ${genMainFooter()} 
+    ${genMainFooter()}
   </footer>
 
   ${genMainNotify()}
