--- a/nimhapkg/tmpl/alarm_numpad.tmpl
+++ b/nimhapkg/tmpl/alarm_numpad.tmpl
@@ -44,7 +44,7 @@
               <div class="col-12 inner">
 
                 # if onlyCode:
-                  <label>Current status: $alarmPretty</label>
+                  <label>Current status: <span class="currentAlarm">${alarmPretty}</span></label>
                   <select class="onlyCode form-control form-control-sm">
                     <option value="disarmed">Disarm alarm</option>
                     <option value="armAway">Arm away</option>
