--- a/nimhapkg/tmpl/cron.tmpl
+++ b/nimhapkg/tmpl/cron.tmpl
@@ -33,6 +33,8 @@
             #
             # let mqttActions = getAllRows(dbMqtt, sql"SELECT id, name FROM mqtt_templates")
             #
+            # let osActions = getAllRows(dbOs, sql"SELECT id, name FROM os_templates")
+            #
             # let rpiActions = getAllRows(dbRpi, sql"SELECT id, name FROM rpi_templates")
             #
             # let xiaomiAlarm = getAllRows(dbXiaomi, sql"SELECT xda.id, xda.name, xd.name FROM xiaomi_templates AS xda LEFT JOIN xiaomi_devices AS xd ON xd.sid = xda.sid ORDER BY xda.name")
@@ -49,6 +51,10 @@
             #
             # for mqtt in mqttActions:
             #   select.add("<option value='" & mqtt[0] & "' data-element='mqtt'>MQTT: " & mqtt[1] & "</option>")
+            # end for
+            #
+            # for os in osActions:
+            #   select.add("<option value='" & os[0] & "' data-element='os'>OS: " & os[1] & "</option>")
             # end for
             #
             # for rpi in rpiActions:
