Exec as non blocking

--- a/nimhapkg/tmpl/os.tmpl
+++ b/nimhapkg/tmpl/os.tmpl
@@ -32,6 +32,7 @@
 
             <h3>OS test command</h3>
             <i>Command is only shown on terminal output.</i>
+            <p>Do not test blocking commands! They will block NimHA, and you need to restart NimHA. Blocking commands are allowed below as templates, but not in test-runs.</p>
             <div class="osTest">
               <label>Run command</label>
               <input class="form-control form-control-sm testos command" />
