--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -74,7 +74,15 @@
         <li><a href="/rss">RSS</a></li>
         <li><a href="/xiaomi/devices">Xiaomi devices</a></li>
       </ul>
-    <li><a href="/settings">Settings</a></li>
+    </li>
+    <li>
+      <a href="#submenu2" data-toggle="collapse" aria-expanded="false">Settings</a>
+      <ul class="collapse list-unstyled" id="submenu2">
+        <li><a href="/settings/system">System commands</a></li>
+        <li><a href="/settings/serverinfo">Server info</a></li>
+        <li><a href="/settings/log">NimHA log</a></li>
+      </ul>
+    </li>
     <li><a href="https://github.com/ThomasTJdev/nim_homeassistant">Github</a></li>
     <li><a href="/logout">Logout</a></li>
   </ul>
