Fix custom mqtt templates

--- a/nimhapkg/tmpl/mqtt.tmpl
+++ b/nimhapkg/tmpl/mqtt.tmpl
@@ -38,6 +38,7 @@
             <h2>Add MQTT templates</h2>
 
             <div class="mqtt">
+              <p>Insert topic in double quotes, e.g. "myTopic"</p>
 
               <table class="mqtt table table-bordered table-hover">
                 <thead>
