--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -35,7 +35,7 @@
 <script src="https://maps.google.com/maps/api/js?key=$gMapsApi" type="text/javascript" defer></script>
 # end if
 
-<script src="/js/js.js" defer></script>
+<script src="/js/script.js" defer></script>
 # end if
 #end proc
 #
@@ -162,7 +162,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js" defer></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/Sortable/1.6.0/Sortable.min.js" defer></script>
 
-    <script src="/js/js.js" defer></script>
+    <script src="/js/script.js" defer></script>
   # end if
 </head>
 
