--- a/nimhapkg/tmpl/main.tmpl
+++ b/nimhapkg/tmpl/main.tmpl
@@ -61,26 +61,26 @@
     <li>
       <a href="#submenu1" data-toggle="collapse" aria-expanded="false">Pages</a>
       <ul class="collapse list-unstyled" id="submenu1">
-        <li><a href="/alarm">Alarm</a></li>
-        <li><a href="/certificates">Certificates</a></li>
-        <li><a href="/cron">Cron jobs</a></li>
-        <li><a href="/mail">Mail</a></li>
-        <li><a href="/filestream">Filestream</a></li>
-        <li><a href="/mqtt">MQTT</a></li>
-        <li><a href="/os">OS</a></li>
-        <li><a href="/owntracks">Owntracks</a></li>
-        <li><a href="/pushbullet">Pushbullet</a></li>
-        <li><a href="/rpi">Raspberry Pi</a></li>
-        <li><a href="/rss">RSS</a></li>
-        <li><a href="/xiaomi/devices">Xiaomi devices</a></li>
+        <li><a href="/alarm">- Alarm</a></li>
+        <li><a href="/certificates">- Certificates</a></li>
+        <li><a href="/cron">- Cron jobs</a></li>
+        <li><a href="/mail">- Mail</a></li>
+        <li><a href="/filestream">- Filestream</a></li>
+        <li><a href="/mqtt">- MQTT</a></li>
+        <li><a href="/os">- OS</a></li>
+        <li><a href="/owntracks">- Owntracks</a></li>
+        <li><a href="/pushbullet">- Pushbullet</a></li>
+        <li><a href="/rpi">- Raspberry Pi</a></li>
+        <li><a href="/rss">- RSS</a></li>
+        <li><a href="/xiaomi/devices">- Xiaomi devices</a></li>
       </ul>
     </li>
     <li>
       <a href="#submenu2" data-toggle="collapse" aria-expanded="false">Settings</a>
       <ul class="collapse list-unstyled" id="submenu2">
-        <li><a href="/settings/system">System commands</a></li>
-        <li><a href="/settings/serverinfo">Server info</a></li>
-        <li><a href="/settings/log">NimHA log</a></li>
+        <li><a href="/settings/system">- System commands</a></li>
+        <li><a href="/settings/serverinfo">- Server info</a></li>
+        <li><a href="/settings/log">- NimHA log</a></li>
       </ul>
     </li>
     <li><a href="https://github.com/ThomasTJdev/nim_homeassistant">Github</a></li>
